[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/button.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/button_base.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/sprites/btn_pressed.png" id="3"]
[ext_resource type="FontFile" path="res://assets/fonts/monogram-extended.ttf" id="4"]
[ext_resource type="Script" path="res://scripts/utils/audio_manager.gd" id="5"]
[ext_resource type="AudioStream" path="res://assets/sound effects/button_press.mp3" id="6"]
[ext_resource type="AudioStream" path="res://assets/sound effects/button_release.mp3" id="7"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}]
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(116, 58)
script = null

[node name="Button" type="Node2D"]
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.38419e-07, -30)
scale = Vector2(2.65341, 2.65341)
sprite_frames = SubResource("1")
animation = &"idle"
frame_progress = 0.309796

[node name="Label" type="Label" parent="."]
offset_left = -47.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = -18.0
theme_override_colors/font_color = Color(0.33, 0.33, 0.33, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -29)
shape = SubResource("2")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("5")
volume_db = -15
audio_labels = ["press", "release"]
audio_sources = [ExtResource("6"), ExtResource("7")]

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
